# critical-reader

./: README.md  pyproject.toml
app/app/: settings.py
app/common/: admin.py  chat_manager.py  constants.py  models.py  project_manager.py
app/common/content/: constants.py  utils.py
app/common/content/download/: arxiv.py
app/common/content/pdf_scraper/arxiv/: using_api.py
app/common/jobs/: job_dispatcher.py
app/common/jobs/extract_text/: job_dispatcher.py
app/common/jobs/extract_text/using_apis/: jina_ai_api.py
app/common/jobs/rags/: simple.py
app/common/management/commands/: resetdb.py  start_job_runner.py  tui.py  tui_styling.tcss
app/common/migrations/: 0001_initial.py  0002_alter_conversationtable_config.py  0002_alter_resourcerow_status_eventlogrows.py  0002_rename_chunkertable_chunkerrow_and_more.py
app/configuration/: admin.py  models.py
app/configuration/migrations/: 0001_initial.py
app/only_paper/: apps.py
app/tui/: apps.py  models.py
app/tui/widgets/: chat.py  config.py  project.py  resource.py
