[project]
name = "critical-reader"
version = "0.1.0"
description = "A collection of apps to improve the reading and comprehension articles"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["django>=5.2.8", "django-async-job-pipelines"]

[dependency-groups]
dev = [
  "django-extensions>=4.1",
  "ptpython>=3.0.31",
  "python-dotenv>=1.2.1",
  "rich>=14.2.0",
]

[tool.uv.sources]
django-async-job-pipelines = { path = "../django-async-job-pipelines", editable = true }
