[project]
name = "critical-reader"
version = "0.1.0"
description = "A collection of apps to improve the reading and comprehension articles"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.3.0",
    "django>=5.2.8",
    "django-async-job-pipelines",
    "django-click>=2.4.1",
    "django-extensions>=4.1",
    "django-types>=0.22.0",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "ptpython>=3.0.31",
    "pypdf2>=3.0.1",
    "textual>=6.6.0",
    "textual-dev>=1.8.0",
]

[dependency-groups]
dev = [
  "django-extensions>=4.1",
  "isort>=7.0.0",
  "marimo>=0.17.7",
  "ptpython>=3.0.31",
  "python-dotenv>=1.2.1",
  "rich>=14.2.0",
]

[tool.uv.sources]
django-async-job-pipelines = { path = "../django-async-job-pipelines", editable = true }
